--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "Jest",
     "Enzyme",
     "Webpack",
-    "Redux"
+    "Flux",
+    "React Router"
   ],
   "author": "Aviral Mishra (aviral.mishra@gmail.com)",
   "license": "MIT",
@@ -32,7 +33,8 @@
   "homepage": "https://github.com/aviralmishra/react-flux-graphql-demo#readme",
   "babel": {
     "presets": [
-      "react", [
+      "react",
+      [
         "env",
         {
           "targets": {
@@ -76,6 +78,7 @@
     "events": "^1.1.1",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "flux": "^3.1.3",
     "graphql": "^0.12.3",
     "graphql-relay": "^0.5.4",
     "humps": "^2.0.1",
@@ -88,6 +91,7 @@
     "mongodb": "^3.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
