--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
@@ -64,9 +65,11 @@
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.5",
     "jest": "^21.2.1",
+    "node-sass": "^4.7.2",
     "open-browser-webpack-plugin": "^0.0.5",
     "pm2": "^2.9.1",
     "react-test-renderer": "^16.2.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
